samples/_failures_safe/1761356615_c8f97c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dde9b49b.c: In function ‘main’:
./samples/SAFE/__tmp_dde9b49b.c:165:24: error: missing terminating ' character
  165 |         if (input[i] < '1
      |                        ^~
./samples/SAFE/__tmp_dde9b49b.c:165:9: error: expected expression at end of input
  165 |         if (input[i] < '1
      |         ^~
./samples/SAFE/__tmp_dde9b49b.c:165:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dde9b49b.c:165:9: error: expected declaration or statement at end of input
